--- a/rest-api-demo/src/main/resources/application.properties
+++ b/rest-api-demo/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/demo
 spring.datasource.username=root
 spring.datasource.password=root123
 spring.jpa.hibernate.ddl-auto=update
+
+#
+#custom user credentials
+#
+#spring.security.user.name=raza
+#spring.security.user.password=raza123
