--- a/rest-api-demo/src/main/resources/application.properties
+++ b/rest-api-demo/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 #database configuration properties
-spring.datasource.url=jdbc:mysql://localhost:3306/demo
+spring.datasource.url=jdbc:mysql://localhost:3306/customers_db
 spring.datasource.username=root
 spring.datasource.password=root123
 spring.jpa.hibernate.ddl-auto=update
+
+#logging.level.org.springframework.jdbc=DEBUG
+logging.level.org.springframework.security=DEBUG
+
 
 #
 #custom user credentials
